--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="upgrade-insecure-requests"
+    />
+
     <title>Movie App</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap"
@@ -23,7 +28,7 @@
           <div class="header__wrapper container">
             <div class="header__logo">
               <a href="/" class="logo__link">
-                <img class="logo__img" src="assets/tv.png" alt="" srcset="" />
+                <img class="logo__img" src="./assets/tv.png" alt="" srcset="" />
                 <h3 class="logo__text">MovieBox</h3>
               </a>
             </div>
@@ -38,7 +43,7 @@
                 <svg class="search__icon">
                   <use
                     class="search-icon-js"
-                    href="/assets/sprite.svg#search"
+                    href="./assets/sprite.svg#search"
                   ></use>
                 </svg>
               </button>
@@ -49,7 +54,7 @@
                   <svg class="service__icon">
                     <use
                       class="js-theme-icon"
-                      href="/assets/sprite.svg#sun"
+                      href="./assets/sprite.svg#sun"
                     ></use>
                   </svg>
                 </button>
@@ -88,7 +93,7 @@
               <div class="rating__item">
                 <div class="rating__image">
                   <img
-                    src="assets/rating-1.png"
+                    src="./assets/rating-1.png"
                     width="35px"
                     height="17px"
                     alt="rating"
@@ -99,7 +104,7 @@
               <div class="rating__item">
                 <div class="rating__image">
                   <img
-                    src="assets/rating-2.png"
+                    src="./assets/rating-2.png"
                     width="16px"
                     height="17px"
                     alt="rating"
@@ -115,7 +120,7 @@
             </p>
             <a href="#" class="hero__button">
               <img
-                src="assets/Icon.png"
+                src="./assets/Icon.png"
                 width="20px"
                 height="20px"
                 alt="play"
@@ -162,7 +167,7 @@
         <div class="modal__wrap">
           <div class="modal__head">
             <button class="modal__close-button">
-              <svg><use href="assets/sprite.svg#close"></use></svg>
+              <svg><use href="./assets/sprite.svg#close"></use></svg>
             </button>
           </div>
           <div class="modal__content">
